# cipollino-studio

./: .gitignore  .gitmodules  Cargo.toml  README.md
alisa/alisa/: Cargo.toml
alisa/alisa-proc-macros/: Cargo.toml
alisa/alisa-proc-macros/src/: enum_serialization.rs  lib.rs
alisa/alisa/examples/: slides.rs
alisa/alisa/examples/test/: main.rs  ui.rs
alisa/alisa/examples/test/project/: folder.rs  mod.rs
alisa/alisa/src/: action.rs  lib.rs  protocol.rs  server.rs  util.rs
alisa/alisa/src/action/: invertible_operation.rs  mod.rs
alisa/alisa/src/client/: local.rs  mod.rs
alisa/alisa/src/client/collab/: keychain.rs  mod.rs
alisa/alisa/src/file/: keymap.rs  mod.rs
alisa/alisa/src/object/: mod.rs  obj_kind.rs  obj_list.rs  ptr.rs
alisa/alisa/src/object/ptr/: any_ptr.rs  holding_ptr.rs  loading_ptr.rs  mod.rs  owning_ptr.rs  ptr_enum.rs
alisa/alisa/src/operation/: common.rs  delta.rs  mod.rs  recorder.rs
alisa/alisa/src/operation/delta/: common.rs  mod.rs
alisa/alisa/src/project/: mod.rs  project_context.rs
alisa/alisa/src/serialization/: loading_ptr.rs  mod.rs  serialization_impls.rs
alisa/alisa/src/serialization/abf/: mod.rs
alisa/alisa/src/serialization/binary/: SPEC.md  mod.rs
alisa/alisa/src/tree/: child_list.rs  child_ptr.rs  creation.rs  mod.rs  transfer.rs  unordered_child_list.rs
alisa/alisa/tests/: conflict_resolution.rs  decoder_tests.rs  dummy_project.rs  encoder_tests.rs  loading.rs  loading_ptr.rs  owning_ptr.rs  serialization.rs  test_server.rs
alisa/alisa/tests/decoder/: array.rs  binary.rs  bool.rs  enums.rs  float.rs  int.rs  map.rs  mod.rs  obj_ptr.rs  string.rs  uint.rs
alisa/alisa/tests/encoder/: array.rs  binary.rs  bool.rs  enums.rs  int.rs  map.rs  mod.rs  obj_ptr.rs  string.rs  uint.rs
cipollino/: Cargo.toml
cipollino/client/: Cargo.toml  build.rs
cipollino/client/res/: quotes.txt
cipollino/client/res/macos/: Info.plist
cipollino/client/src/: main.rs
cipollino/client/src/audio/: import.rs  mod.rs
cipollino/client/src/audio/engine/: mod.rs  state.rs
cipollino/client/src/audio/playback/: buffering.rs  cache.rs  mod.rs  state.rs
cipollino/client/src/editor/: layer_render_list.rs  menu_bar.rs  mesh_cache.rs  mod.rs  presence.rs  scene_render_list.rs  selection.rs  shortcuts.rs  socket.rs  state.rs  undo_redo.rs  window.rs
cipollino/client/src/editor/clipboard/: mod.rs  scene.rs  timeline.rs
cipollino/client/src/editor/export/: mod.rs  progress_modal.rs  video_writer.rs
cipollino/client/src/editor/selection/: mod.rs  selectable.rs
cipollino/client/src/editor/settings/: appearance.rs  mod.rs  shortcuts.rs
cipollino/client/src/editor/state/: editor_state.rs  mod.rs  preview.rs  project_state.rs  renderer_state.rs
cipollino/client/src/export/: audio_writer.rs  ffmpeg_path.rs  mod.rs  video_writer.rs
cipollino/client/src/export/progress_modal/: mod.rs  video.rs
cipollino/client/src/panels/: assets.rs  mod.rs  scene.rs
cipollino/client/src/panels/assets/: clip_dialog.rs  list.rs  menu_bar.rs  mod.rs  selection.rs  tree_ui.rs
cipollino/client/src/render/: builtin_brushes.rs  mod.rs
cipollino/client/src/splash/: collab.rs  menu.rs  mod.rs  new_project.rs  recents.rs
cipollino/client/src/systems/: mod.rs  prefs.rs  shortcut.rs
cipollino/client/src/tool/: mod.rs  pencil.rs
cipollino/client/src/util/: brush.rs  color.rs  mod.rs  ui.rs
cipollino/project/: Cargo.toml
cipollino/project/src/: asset.rs  color.rs  folder.rs  lib.rs  project.rs  protocol.rs
cipollino/project/src/asset/: clip.rs  folder.rs  mod.rs
cipollino/project/src/audio_instance/: mod.rs  operations.rs
cipollino/project/src/frame/: creation.rs  mod.rs  set_time.rs
cipollino/project/src/layer/: audio.rs  group.rs  layer.rs  mod.rs
cipollino/project/src/scene/: fill.rs  mod.rs  stroke.rs
cipollino/res/: quotes.txt
cipollino/scripts/: build_all.sh  linux_aarch64_build.sh  linux_x86_64_build.sh  macos_aarch64_build.sh  macos_build.sh  windows_x86_64_build.sh
cipollino/server/: Cargo.toml
cipollino/server/src/: main.rs  server.rs
cipollino/src/: main.rs
cipollino/src/app/: collab.rs  mod.rs  new_project.rs  splash_screen.rs  util.rs
cipollino/src/app/editor/: keybind.rs  menu_bar.rs  mod.rs
cipollino/src/app/prefs/: mod.rs  native.rs  web.rs
cipollino/src/editor/: frames.rs  menu_bar.rs  mod.rs  playback.rs
cipollino/src/panels/: mod.rs
cipollino/src/panels/assets/: mod.rs
cipollino/src/panels/scene/: mod.rs
cipollino/src/panels/timeline/: controls.rs  frames.rs  header.rs  layers.rs  mod.rs
cipollino/src/util/ui/: dnd.rs  keybind.rs  mod.rs
cipollino_project/: Cargo.toml  build.rs
cipollino_project/objgen/: action.rs  client.rs  client_collab.rs  mod.rs  obj.rs  protocol.rs  server.rs
cipollino_project/src/: lib.rs  protocol.rs  socket.rs  util.rs
cipollino_project/src/client/: collab.rs  folder.rs  local.rs  mod.rs
cipollino_project/src/crdt/: fractional_index.rs  mod.rs  register.rs
cipollino_project/src/project/: action.rs  clip.rs  folder.rs  frame.rs  layer.rs  mod.rs  obj.rs  stroke.rs
cipollino_project/src/serialization/: mod.rs
cipollino_project/src/serialization/project_file/: binary.rs  mod.rs  object.rs  pages.rs
cipollino_project/src/server/: mod.rs
cipollino_server/: Cargo.toml
cipollino_server/src/: main.rs
elic/: Cargo.toml  README.md
elic/src/: lib.rs
elic/src/collections/: mod.rs  small_arr.rs
elic/src/geometry/: bezier.rs  line.rs  linear.rs  mod.rs  segment.rs
elic/src/geometry/bezier/: mod.rs  path.rs
elic/src/math/: axis.rs  color.rs  ivec2.rs  mat4.rs  mod.rs  range.rs  rect.rs  roots.rs  vec2.rs  vec4.rs
(+245 files in other folders)
