
[workspace]
members = [
    "elic",
    "verter",

    "alisa/alisa-proc-macros",
    "alisa/alisa",

    "pierro",
    "malvina",

    "cipollino/project",
    "cipollino/client",
    "cipollino/server"
]

[workspace.dependencies]
serde = {version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
wgpu = "22.1.0"