
[package]
name = "cipollino"
version = "0.1.0"
edition = "2021"

[dependencies]

egui = "0.27"
eframe = {version = "0.27", features = ["wgpu"]}
egui_extras = {version = "*", features = ["all_loaders"]}
egui_dock = {version = "0.12", features = ["serde"]} 
egui-phosphor = "0.5.0"
catppuccin-egui = { version = "5.1", default-features = false, features = ["egui27"] }

log = "0.4"

include-lines = "1.1.2"
rand = "0.8.5"

bson = "=2.11.0"
serde = "1.0.202"
serde_json = "1.0.117"
directories = "5.0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tinyfiledialogs = "3.9.1"
cipollino_project = {path = "../cipollino_project", features = ["desktop"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
getrandom.features = ["js"]
cipollino_project = {path = "../cipollino_project"}
web-sys = {version = "0.3.69", features = ["Storage"]}
