
[package]
name = "elic"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A utilities library for Rust"
repository = "https://github.com/cipollino-studio/cipollino-studio/tree/main/elic"
readme = "README.md"

[features]
serde = ["dep:serde"]

[dependencies]
roots = "0.0.8"
serde = { workspace = true, optional = true, features = ["derive"] }