[package]
name = "cipollino-studio"
version = "0.1.0"
edition = "2021"

[dependencies]
project = { path = "../project" }

pierro = { path = "../../pierro", features = ["serde"] } 
malvina = { path = "../../malvina" }

ewebsock = { version = "0.8.0", features = ["tls"] }
rustls = "0.23.11"

clap = { version = "4.1.11", features = ["derive"] }

rfd = "0.15.2"
directories = "5.0"
pathdiff = "0.2.1"

serde = { workspace = true }
serde_json = { workspace = true }